New design around Canvass object

--- a/test/canvass.xhtml
+++ b/test/canvass.xhtml
@@ -1,18 +1,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <!-- service -->
 <head>
-	<title>Elector Service - HashDagger</title> 
+	<title>Canvass Service - HashDagger</title> 
 	<link rel="stylesheet" type="text/css" href="http://sanfoura.alixsys.com/slim/2008/service-descriptor.css" />
 	<script src="http://sanfoura.alixsys.com/slim/2008/service-descriptor.js"></script>
 </head>
 <body>
-<h1>Save an Elector</h1>
-<p>Takes all the information about an elector and saves it</p>
+<h1>Save a Canvass</h1>
+<p>Takes all the information about a canvass and saves it</p>
 
- <form action="http://afkar.tn/elector/" method="post">
-  <fieldset><legend>101</legend>
-  <input name="begin-101" type="text" />
-  <input name="end-101" type="text" />
+ <form action="http://afkar.tn/canvass/" method="post">
+  <fieldset><legend>canvass</legend>
+  <input name="canvass-begin" type="text" />
+  <input name="canvass-end" type="text" />
   <input name="opened-door" type="text" />
   <input name="answered-questions" type="text" />
   </fieldset>
@@ -28,13 +28,13 @@
   </fieldset>
 
   <fieldset><legend>Contact</legend>
-  <input name="name" type="text" />
-  <input name="age" type="text" />
-  <input name="phone" type="text" />
-  <input name="email" type="text" />
+  <input name="person-name" type="text" />
+  <input name="person-age" type="text" />
+  <input name="person-phone" type="text" />
+  <input name="person-mail" type="text" />
   </fieldset>
 
-  <fieldset><legend>Vote</legend>
+  <fieldset><legend>Opinion</legend>
   <input name="will-vote" type="text" />
   <input name="for-party" type="text" />
   <input name="for-independent" type="text" />
@@ -46,7 +46,7 @@
 
  </form>
 
-<h1>Display and Elector</h1>
+<h1>Display an Elector</h1>
 <p>Takes an elector ID and gives back card</p>
 
  <form action="http://afkar.tn/elector/" method="get">
